--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0-alpha.0",
+    "@craco/craco": "^5.9.0",
     "@date-io/date-fns": "^2.13.1",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -27,7 +31,7 @@
     "react-hook-form": "^7.30.0",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.2",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.6.4",
