--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "node-sass": "^7.0.1",
     "process": "^0.11.10",
