--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "node-sass": "node-sass",
+    "sass": "node-sass -wr --source-map true src/styles/main.scss src/styles/style.css"
   },
   "eslintConfig": {
     "extends": [
